testsuite/tests/dependent/should_fail/T14066f.stderr

T14066f.hs:8:1: error:
    • The kind of ‘P’ is ill-scoped
        Inferred kind: P :: k -> forall k -> *
      Perhaps try this order instead: k (a :: k)
    • In the type synonym declaration for ‘P’
